foundation-objs/main/default/objects/AutoRenewal_Plan_Tier_Configs_Metadata__mdt/AutoRenewal_Plan_Tier_Configs_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>AutoRenewal Plan Tier Configs Metadata</label>
    <pluralLabel>AutoRenewal Plan Tier Configs Metadatas</pluralLabel>
</CustomObject>