foundation-objs/main/default/objects/AutoRenewal_Plan_Tier_Configs_Metadata__mdt/fields/Over_Usage_Formula__c.field-meta.xml
<CustomField>
    <fullName>Over_Usage_Formula__c</fullName>
    <label>Over Usage Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>