foundation-objs/main/default/objects/AutoRenewal_Plan_Tier_Configs_Metadata__mdt/fields/SGST_Percentage__c.field-meta.xml
<CustomField>
    <fullName>SGST_Percentage__c</fullName>
    <label>SGST Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>